--- a/content/DEBIAN/control
+++ b/content/DEBIAN/control
@@ -4,7 +4,7 @@ Version: 2.76
 Section: net
 Priority: optional
 Architecture: armhf
-Depends: xbian-update, libevent-dev, libcurl3
+Depends: xbian-update, libevent-dev, libcurl3, unrar
 Conflicts: transmission-cli, transmission-daemon, transmission-common
 Maintainer: sjengfred <sjengfred@home.nl>
 Description: Transmission 2.76 compiled, patched and configured for XBian
