--- a/content-tpl/DEBIAN/control
+++ b/content-tpl/DEBIAN/control
@@ -3,7 +3,7 @@ Package: xbian-package-transmission
 Version: __DATE__
 Section: net
 Priority: optional
-Architecture: armhf
+Architecture: all
 Pre-Depends: transmission-daemon
 Depends: transmission-cli, unrar, xbian-package-config-shell (>=20181201-0), xbian-package-xbianhome
 Conflicts:
